# souffle

./: .clang-format  .gitignore  .gitmodules  .souffle-sh  .travis.yml  CMakeLists.txt  FOO.cpp  Makefile.am  README.md  aminclude.am  bootstrap  configure.ac  doxygen.cfg
interfaces/: .gitignore  Makefile.am  souffle-compilelib.in
interfaces/examples/: Main.scala
interfaces/include/: AstBuilder.h  Executor.h  InterfaceResult.h  Interfaces.h  Logger.h
interfaces/jni/include/: conversion.h  handle.h
interfaces/jni/java/: Arg.java  Atom.java  BinOp.java  Clause.java  Const.java  Constraint.java  Data.java  Driver.java  Executor.java  Literal.java  Negation.java  PrimData.java  PrimType.java  Program.java  Relation.java  Result.java  SConst.java  Solver.java  Type.java  Var.java
interfaces/jni/src/: Atom.cpp  BinOp.cpp  Clause.cpp  Const.cpp  Constraint.cpp  Data.cpp  Executor.cpp  Negation.cpp  PrimData.cpp  PrimType.cpp  Program.cpp  Relation.cpp  Result.cpp  SConst.cpp  Solver.cpp  Var.cpp
interfaces/src/: AstBuilder.cpp  Executor.cpp  Interfaces.cpp
prof/: MANIFEST.MF  Makefile.am  souffle-profile
src/: .gitignore  AstAnalysis.h  AstArgument.cpp  AstArgument.h  AstAttribute.h  AstClause.cpp  AstClause.h  AstComponent.h  AstIODirective.h  AstLiteral.h  AstNode.h  AstParserUtils.cpp  AstParserUtils.h  AstProgram.cpp  AstProgram.h  AstRelation.h  AstRelationIdentifier.h  AstSemanticChecker.cpp  AstSemanticChecker.h  AstSrcLocation.cpp  AstSrcLocation.h  AstTransformer.cpp  AstTransformer.h  AstTransforms.cpp  AstTransforms.h  AstTranslationUnit.h  AstTuner.cpp  AstTuner.h  AstType.h  AstTypeAnalysis.cpp  AstTypeAnalysis.h  AstTypes.h  AstUtils.cpp  AstUtils.h  AstVisitor.h  BTree.h  BddbddbBackend.cpp  BddbddbBackend.h  BinaryConstraintOps.h  BinaryFunctorOps.h  (+118 more)
src/profilerlib/: Cell.hpp  CellInterface.hpp  Cli.cpp  Cli.hpp  DataComparator.hpp  Iteration.cpp  Iteration.hpp  OutputProcessor.cpp  OutputProcessor.hpp  ProgramRun.cpp  ProgramRun.hpp  Reader.cpp  Reader.hpp  Relation.cpp  Relation.hpp  Row.hpp  Rule.cpp  Rule.hpp  StringUtils.cpp  StringUtils.hpp  Table.cpp  Table.hpp  Tui.cpp  Tui.hpp  UserInputReader.cpp  UserInputReader.hpp  html_string.hpp
src/profilerlib/gui_src/: chartist-plugin-tooltip.js  chartist.min.js  chartist_tablesort.js  chartiststyle.css  largetesttabledata.js  main.html  main.js  mappedids.js  page_functions.js  style.css  table.css  tablesort.js  tablesort.number.js  testdata.js  testo.html  testtabledata.js  util.js
src/test/: .gitignore  ast_parser_utils_test.cpp  ast_program_test.cpp  ast_utils_test.cpp  binary_relation_test.cpp  btree_multiset_test.cpp  btree_set_test.cpp  compiled_ram_index_utils_test.cpp  compiled_ram_relation_test.cpp  compiled_ram_tuple_test.cpp  constraints_test.cpp  graph_utils_test.cpp  matching_test.cpp  parallel_utils_test.cpp  ram_executor_test.cpp  ram_relation_stats_test.cpp  rule_scheduler_test.cpp  symbol_table_test.cpp  table_test.cpp  test.h  trie_test.cpp  type_system_test.cpp  util_test.cpp
src/wavelib/: Makefile.am  cpp_context.hpp  cpp_exceptions.hpp  cpp_iteration_context.hpp  instantiate_cpp_exprgrammar.cpp  instantiate_cpp_grammar.cpp  instantiate_cpp_literalgrs.cpp  instantiate_defined_grammar.cpp  instantiate_predef_macros.cpp  instantiate_re2c_lexer.cpp  instantiate_re2c_lexer_str.cpp  language_support.hpp  preprocessing_hooks.hpp  token_ids.cpp  token_ids.hpp  wave.hpp  wave_config.hpp  wave_config_constant.cpp  wave_config_constant.hpp  whitespace_handling.hpp
src/wavelib/cpplexer/: convert_trigraphs.hpp  cpp_lex_interface.hpp  cpp_lex_interface_generator.hpp  cpp_lex_iterator.hpp  cpp_lex_token.hpp  cpplexer_exceptions.hpp  detect_include_guards.hpp  token_cache.hpp  validate_universal_char.hpp
src/wavelib/grammars/: cpp_chlit_grammar.hpp  cpp_defined_grammar.hpp  cpp_defined_grammar_gen.hpp  cpp_expression_grammar.hpp  cpp_expression_grammar_gen.hpp  cpp_expression_value.hpp  cpp_grammar.hpp  cpp_grammar_gen.hpp  cpp_intlit_grammar.hpp  cpp_literal_grammar_gen.hpp  cpp_predef_macros_gen.hpp  cpp_predef_macros_grammar.hpp  cpp_value_error.hpp
src/wavelib/util/: cpp_ifblock.hpp  cpp_include_paths.hpp  cpp_iterator.hpp  cpp_macromap.hpp  cpp_macromap_predef.hpp  cpp_macromap_utils.hpp  file_position.hpp  flex_string.hpp  functor_input.hpp  insert_whitespace_detection.hpp  interpret_pragma.hpp  iteration_context.hpp  macro_definition.hpp  macro_helpers.hpp  pattern_parser.hpp  symbol_table.hpp  unput_queue_iterator.hpp
tests/: .gitignore  .swp  Makefile.am  atlocal.in  evaluation.at  interface.at  profile.at  semantic.at  syntactic.at  testsuite.at
tests/evaluation/2sat/: 2sat.dl
tests/evaluation/access-policy/: access-policy.dl
tests/evaluation/access1/: access1.dl
tests/evaluation/access2/: Instance3.csv  access2.dl
tests/evaluation/access3/: Instance1.csv  Instance2.csv  Instance3.csv  access3.dl
tests/evaluation/ackermann/: ack.csv  ackermann.dl
tests/evaluation/aggregates/: aggregates.dl  res.csv  res1.csv  res2.csv  res3.csv
tests/evaluation/aggregates2/: C2.csv  C4.csv  aggregates2.dl
tests/evaluation/aliases/: aliases.dl
tests/evaluation/andersen/: PointsTo.csv  andersen.dl
tests/evaluation/arithm/: arithm.dl
tests/evaluation/array/: array.dl  element.csv  neighbourhood.csv
tests/evaluation/average/: average.dl
tests/evaluation/bigrams/: bigram.csv  bigrams.dl
tests/evaluation/binop/: A.csv  B.csv  C.csv  D.csv  E.csv  F.csv  S.csv  binop.dl
tests/evaluation/bitvector/: bitvector.dl
tests/evaluation/cat/: Z.csv  cat.dl
tests/evaluation/catalan/: catalan.csv  catalan.dl
tests/evaluation/cba_expr_value/: cba_expr_value.dl  data_term.csv
tests/evaluation/cellular_automata/: array.dl  cell.csv  cellular_automata.dl  element.csv  environment.csv  neighbourhood.csv
tests/evaluation/centroids/: centroids.dl
tests/evaluation/choice/: actual_adv.csv  choice.dl  diffchoice.csv
tests/evaluation/circuit_eval/: circuit_eval.dl  g_assignment.csv  yield_outs.csv
tests/evaluation/circuit_sat/: circuit_sat.dl  (+1 more)
tests/semantic/: semantic.err
(+885 files in other folders)
